# interbotix_xs_driver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  flake.nix  mode_configs.yaml  wx250s_motor_config.yaml
.github/: CODEOWNERS
.github/workflows/: standalone.yaml
configs/: wx250s_motor_config.yaml
include/interbotix_xs_driver/: xs_common.hpp  xs_driver.hpp  xs_logging.hpp
src/: protocols.h  udp_client.cpp  udp_daemon.cpp  udp_daemon.h  wx_serverd.cpp  xs_driver.cpp  xs_logging.cpp
wx_armor/: CMakeLists.txt  README.md  default.nix  io.cc  io.h  robot_profile.cc  robot_profile.h  wx_armor.cc  wx_armor_driver.cc  wx_armor_driver.h
wx_armor/configs/: wx250s_motor_config.yaml
wx_armor/wx_armor/: guardian_thread.cc  guardian_thread.h  motor_health_thread.cc  motor_health_thread.h  perf.cc  robot_profile.cc  robot_profile.h  wx_armor.cc  wx_armor_driver.cc  wx_armor_driver.h  wx_armor_ws.cc  wx_armor_ws.h
